bugfix for 56 and 57 and arrow spacing on Add New Warehouse

--- a/src/pages/WarehousesPage/WarehousesPage.scss
+++ b/src/pages/WarehousesPage/WarehousesPage.scss
@@ -47,4 +47,14 @@
     cursor: pointer;
     padding: 0.5rem 1rem;
   }
+
+  &__back-button {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+  }
+
+  &__arrow {
+    padding-top: .5rem;
+  }
 }
